# codescout

./: .gitignore  .gitmodules  AGENTS.md  README.md  pyproject.toml  requirements-npu.txt
configs/: reward_config_4b.yaml
configs/rewards/: baseline_4b.yaml  baseline_4b_softturn_stage3.yaml  prefilter_localization_only.yaml
configs/skyrl-experiments/ablation/: behavior_shaping.yaml  hierarchical_no_bonus.yaml  hierarchical_soft.yaml  multilevel_f05.yaml  multilevel_f1.yaml  multilevel_no_format.yaml  prompt_backticks_baseline.yaml
docs/: ascend-adaptation-recovery.md  npu-adaptation-status.md  npu-training-guide.md  skyrl-fork-provenance.md  sp2-reward-gap-analysis.md
docs/archive/: investigate-npu-precision-gap.md  investigate-npu-training-spikes.md  npu-gpu-callchain-diff.md  npu-rl-training-spike-analysis.md
patches/: skyrl-ascend-npu.patch
scripts/: README_curriculum_training_usage.md  README_prefilter_data.md  analyze_curriculum_diagnostics.py  analyze_prefilter_distribution.py  convert_prefilter_to_parquet.py  patch_checkpoint_for_stage.py  precache_repos.py  prefilter_data.py  quantify_batch_dim_bug.py  run_ablation.sh  run_async_training_14B.sh  run_async_training_4b.sh  run_async_training_npu.sh  run_async_training_npu_fa2.sh  run_async_training_npu_sp2.sh  run_baseline_4b.sh  run_baseline_4b_softer_mtr.sh  run_curriculum_training.sh  run_offline_eval.sh  run_prefilter_comparison.sh  select_curriculum_stage.py  setup_ascend_env.sh  test_packing_isolation.py  test_training_npu.sh  validate_mask_change_impact.py  verify_sdpa_vs_fa2_npu.py  write_eval_summary.py
scripts/archive/mem-analysis/: calibrate_mem.py  calibrate_mem_v2.py  estimate_rl_strategy.py  estimate_sp_need.py  mem_breakdown.py  rl_mem_dryrun.py  rl_mem_dryrun_v2.py  rl_mem_survey.py
scripts/archive/misc/: git_clone_via_api.sh  git_proxy_connect.py  inference_probe.py  local_connect_proxy.py  start_vllm_all_npus.sh  (+1 more)
src/: async_trainer.py  train.py  train_npu.py
src/agent/: agent.py
src/generator/: code_search_generator.py
src/metrics/: efficiency_metrics.py  trajectory_metrics.py
src/rewards/: behavior_shaping.py  efficiency_reward.py  ranking_rewards.py  tool_compliance.py
src/tools/: bash.py
src/utils/: fsdp_save_patch.py  instance.py  length_normalized_advantage.py
src/workers/: __init__.py  fsdp_workers_with_patch.py
tests/metrics/: test_efficiency_metrics.py
tests/rewards/: test_behavior_shaping.py
wandb/: latest-run
wandb/run-20260325_184214-l66skcbn/: run-l66skcbn.wandb
wandb/run-20260325_185644-u6zlq3j0/: run-u6zlq3j0.wandb
wandb/run-20260325_192704-enexugtc/: run-enexugtc.wandb
wandb/run-20260325_193346-zi6oi63o/: run-zi6oi63o.wandb
wandb/run-20260326_102329-pmza4yqu/: run-pmza4yqu.wandb
wandb/run-20260326_104708-woszy5nm/: run-woszy5nm.wandb
wandb/run-20260326_105942-iqbql0yo/: run-iqbql0yo.wandb
wandb/run-20260326_115737-x63iur08/: run-x63iur08.wandb
wandb/run-20260326_140930-acof589k/: run-acof589k.wandb
wandb/run-20260326_150159-s38gs2ws/: run-s38gs2ws.wandb
wandb/run-20260326_153347-1r12goca/: run-1r12goca.wandb
wandb/run-20260326_173419-mch2pmck/: run-mch2pmck.wandb
(+66 files in other folders)
